<?xml version="1.0"?>
<package format="2">
  <name>libphidgets</name>
  <version>0.6.11</version>
  <description>This package wraps the libphidgets to use it as a ros dependency</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libphidgets</url>
  <maintainer email="benjamin.maidel@ipa.fraunhofer.de">Benjamin Maidel</maintainer>
  <author>Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libusb-dev</depend>

</package>
