<?xml version="1.0"?>
<package format="2">
	<name>libqsopt</name>
	<version>0.1.0</version>
	<description>Wrapper for the Qsopt linear programming solver from http://www.math.uwaterloo.ca/~bico/qsopt/index.html</description>

	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>mk</depend>
	<depend>roslib</depend>
	<depend>rospack</depend>

</package>
