<?xml version="1.0"?>
<package format="2">
	<name>libqsopt</name>
	<version>0.6.11</version>
	<description>Wrapper for the Qsopt linear programming solver. The code was obtained from http://www.math.uwaterloo.ca/~bico/qsopt/index.html, all rights on Qsopt go to the authors David Applegate, William Cook, Sanjeeb Dash, and Monika Mevenkamp. 
The library doesn't explicitly provide a license, but allows the free use for research or educational purposes. For further questions on licensing, contact the previous listed authors.
	</description>

	<url type="website">http://www.math.uwaterloo.ca/~bico/qsopt/index.html</url>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

	<license>free for research or education purpose, all rights maintained by David Applegate, William Cook, Sanjeeb Dash, and Monika Mevenkamp</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>dpkg</depend>

</package>
