<?xml version="1.0"?>
<package format="2">
	<name>opengm</name>
	<version>0.6.11</version>
	<description>
		This package wraps the external c++ library opengm in a ROS package, so other packages can use it. It downloads the source code of it and then unzips it. The library is a header-only library with command line interfaces, which aren't used, so it doesn't gets build. For further descriptions and tutorials see the Makefile.tarball and https://github.com/opengm/opengm .
		Copyright (C) 2013 Bjoern Andres, Thorsten Beier and Joerg H.~Kappes.
	</description>

	<url type="website">http://hciweb2.iwr.uni-heidelberg.de/opengm/</url>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
